--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body{
     min-height: 100vh;
 }
 header{
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.8);
     width: 100%;
     height: 7vh;
     position: relative;
+    position: fixed;
 }
 header nav ul li{
     float: left;
@@ -15,6 +16,7 @@ header nav ul li{
 }
 header nav ul li a{
     text-decoration: none;
+    color: black;
 }
 #logo{
     background-color: aqua;
@@ -22,4 +24,23 @@ header nav ul li a{
     height: 7vh;
     position: absolute;
     left: 92%;
+}
+#inicio{
+    background-color: yellow;
+    width: 100%;
+    height: 100vh;
+    background-image: url(imagenes/chamakitos.jpg);
+    display: flex;
+    align-items: end;
+}
+#titulo{
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 30%;
+    height: 20vh;
+    margin: 30px;
+    text-align: center;
+}
+#titulo h1, #titulo h3{
+    color: white;
+    margin: 25px;
 }
