--- a/style.css
+++ b/style.css
@@ -44,3 +44,29 @@ header nav ul li a{
     color: white;
     margin: 25px;
 }
+.reservas{
+    width: 100%;
+    height: 70vh;
+    margin: 10px 0;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.info{
+    color: white;
+    align-self: center;
+    width: 30%;
+    height: 30vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+}
+.r1{
+    background-image: url(imagenes/reserva1.jpg);
+}
+.precio{
+    align-self: flex-end;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 10%;
+    height: 8vh;
+    margin: 20px 40px;
+}
