--- a/style.css
+++ b/style.css
@@ -19,11 +19,14 @@ header nav ul li a{
     color: black;
 }
 #logo{
-    background-color: aqua;
     width: 5%;
     height: 7vh;
     position: absolute;
     left: 92%;
+}
+#logo img{
+    width: 100%;
+    padding: 10px;
 }
 #inicio{
     background-color: yellow;
@@ -77,4 +80,31 @@ header nav ul li a{
     margin: 20px 40px;
     text-align: center;
     padding-top: 20px;
+}
+footer{
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    justify-content: space-evenly;
+}
+.datos{
+    width: 32%;
+    height: 55%;
+    background-color: gray;
+}
+#maps{
+    width: 80%;
+    height: 40%;
+    margin: 50px;
+}
+#maps img{
+    width: 100%;
+    height: 100%;
+}
+.datos h1{
+    margin: 20px 50px;
+}
+#contacto h1{
+    margin: 80px;
+    text-align: center;
 }
