--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 *{margin: 0; padding: 0;}
 body{
     min-height: 100vh;
+    background-color: rgb(0, 59, 49);
 }
 header{
-    background-color: rgba(255, 0, 0, 0.8);
+    background-color: rgba(197, 85, 10, 0.8);
     width: 100%;
     height: 7vh;
     position: relative;
@@ -85,12 +86,13 @@ footer{
     width: 100%;
     height: 80vh;
     display: flex;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .datos{
     width: 32%;
     height: 55%;
     background-color: gray;
+    margin: 0 11px;
 }
 #maps{
     width: 80%;
@@ -107,4 +109,19 @@ footer{
 #contacto h1{
     margin: 80px;
     text-align: center;
+}
+#integrantes{
+    width: 100%;
+    height: 40%;
+    background-color: gray;
+    display: flex;
+    justify-content: space-evenly;
+}
+.alumnos{
+    width: 20%;
+    height: 100%;
+    background-color: red;
+}
+#equipo{
+    margin-left: 780px;
 }
