--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-*{margin: 0; padding: 0;}
+*{margin: 0; padding: 0;
+    font-family:'josefin slab';
+}
 body{
     min-height: 100vh;
     background-color: rgb(0, 59, 49);
 }
 header{
-    background-color: rgba(197, 85, 10, 0.8);
+    background-color: rgba(209, 120, 61, 0.95);
     width: 100%;
     height: 7vh;
     position: relative;
@@ -18,6 +20,12 @@ header nav ul li{
 header nav ul li a{
     text-decoration: none;
     color: black;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.3em;
+    color: rgb(0, 59, 49);
+}
+header nav ul li a:hover{
+    color: white
 }
 #logo{
     width: 5%;
@@ -46,7 +54,10 @@ header nav ul li a{
 }
 #titulo h1, #titulo h3{
     color: white;
-    margin: 25px;
+    margin: 20px;
+    letter-spacing: 4px;
+    font-size: 2em;
+    font-weight: 1000;
 }
 .reservas{
     width: 100%;
