--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
     background-color: rgb(0, 59, 49);
 }
 header{
-    background-color: rgba(209, 120, 61, 0.95);
+    background-color: rgba(0,0,0,0.8);
     width: 100%;
     height: 7vh;
     position: relative;
@@ -22,10 +22,10 @@ header nav ul li a{
     color: black;
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.3em;
-    color: rgb(0, 59, 49);
+    color: white
 }
 header nav ul li a:hover{
-    color: white
+    color: rgb(260, 120, 61)
 }
 #logo{
     width: 5%;
@@ -38,26 +38,32 @@ header nav ul li a:hover{
     padding: 10px;
 }
 #inicio{
-    background-color: yellow;
     width: 100%;
     height: 100vh;
     background-image: url(imagenes/chamakitos.jpg);
     display: flex;
-    align-items: end;
+    align-items: center;
+    justify-content: center;
 }
 #titulo{
     background-color: rgba(0, 0, 0, 0.7);
-    width: 30%;
-    height: 20vh;
+    width: 50%;
+    height: 40%;
     margin: 30px;
     text-align: center;
 }
-#titulo h1, #titulo h3{
+#titulo h1{
     color: white;
-    margin: 20px;
+    margin: 60px 0 20px;
     letter-spacing: 4px;
-    font-size: 2em;
-    font-weight: 1000;
+    font-size: 4em;
+    padding: 20px;
+}
+#titulo h3{
+    color: white;
+    letter-spacing: 4px;
+    font-size: 3em;
+    padding: 20px;
 }
 .reservas{
     width: 100%;
