--- a/style.css
+++ b/style.css
@@ -81,6 +81,33 @@ header nav ul li a:hover{
     background-color: rgba(0, 0, 0, 0.7);
     padding: 20px;
 }
+.info h1, .info h2, .info h3{
+    text-align: center;
+    line-height: 40px;
+    margin: 20px;
+}
+.info h1{
+    font-size: 2em;
+}
+.info h2{
+    font-size: 1.7em;
+}
+.info h3{
+    font-size: 1.3em;
+    line-height: 30px;
+}
+.i2 h1{
+    font-size: 2em;
+}
+.i2 h2{
+    font-size: 1.7em;
+}
+.i3 h3{
+    font-size: 1.3em;
+}
+.i2 h1, .i2 h2, .i2 h3{
+    margin: 10px;
+}
 .r1{
     background-image: url(imagenes/reserva1.jpg);
 }
@@ -93,11 +120,24 @@ header nav ul li a:hover{
 .precio{
     align-self: flex-end;
     background-color: rgba(0, 0, 0, 0.7);
-    width: 10%;
-    height: 8vh;
+    width: 15%;
+    height: 15%;
     margin: 20px 40px;
     text-align: center;
-    padding-top: 20px;
+}
+.precio h1, .precio a{
+    font-family: 'preahvihear';
+    font-weight: bold;
+    color: white;
+    margin: 8px;
+}
+.precio a{
+    text-decoration: none;
+    font-size: 1.5em;
+    font-family: 'Times New Roman', Times, serif
+}
+.precio a:hover{
+    color: rgb(260, 120, 61);
 }
 footer{
     width: 100%;
