--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ footer{
     padding-left: 75px;
 }
 .foto{
-    background-color: aqua;
+    background-color: white;
     width: 80%;
     height: 80%;
 }
