--- a/style.css
+++ b/style.css
@@ -244,9 +244,9 @@ header nav ul li a:hover{
 #bodyindex2{
     background-image: linear-gradient(rgba(36, 36, 36, 0.7), rgba(0, 59, 49, 0.7)), url(imagenes/backgroungreen.jpg);
 }
-#contenedor{
+.contenedor{
     width: 100%;
-    height: 95vh;
+    height: 93.95vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -259,7 +259,7 @@ header nav ul li a:hover{
 }
 #footer2{
     width: 100%;
-    height: 1vh;
+    height: 1px;
     margin-bottom: 30px;
 }
 #titulo2{
@@ -322,6 +322,8 @@ header nav ul li a:hover{
     font-size: 1.5em;
     margin: 21px 0;
     border: 2px solid rgb(260, 120, 61);
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
 }
 .c3 textarea::placeholder{
     color: white; 
@@ -338,4 +340,31 @@ header nav ul li a:hover{
 #enviar input:hover{
     color: rgb(260, 120, 61);
     cursor: pointer;
+}
+
+/* estilos para index3 */
+#invisible2{
+    background-color: aqua;
+    width: 70%;
+    height: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    justify-content: center;
+}
+#titulo3{
+    background-color: blue;
+    width: 100%;
+    height: 20%;
+}
+.cuadro2{
+    background-color: yellow;
+    width: 45%;
+    height:70% ;
+}
+#enviar2{
+    background-color: blue;
+    width: 50%;
+    height: 10%;
+    
 }
