--- a/style.css
+++ b/style.css
@@ -193,6 +193,11 @@ header nav ul li a:hover{
     width: 80%;
     height: 80%;
 }
+.foto img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 .texto{
     width: 80%;
     height: 25%;
